Closed Bug 1379538 Opened 7 years ago Closed 7 years ago

Unresolved symbols when linking program to standalone SpiderMonkey

Categories

(Core :: JavaScript Engine, defect)

52 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- fixed
firefox56 --- fixed

People

(Reporter: ptomato, Assigned: ptomato)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36 Steps to reproduce: There are a few symbols that need to be marked as exported in the SpiderMonkey shared library, because they are used in the public headers. Actual results: Building a program that includes the SpiderMonkey public headers, fails with js::oom::GetThreadType() and js::ReportOutOfMemory() unresolvable.
Attached patch headers: Fix symbols visibility (obsolete) — Splinter Review
Here's a patch that works for me.
Blocks: 1379541
Blocks: sm-embedding
Comment on attachment 8884717 [details] [diff] [review] headers: Fix symbols visibility Review of attachment 8884717 [details] [diff] [review]: ----------------------------------------------------------------- Nick, this looks ok to me. WDYT?
Attachment #8884717 - Flags: review?(nfitzgerald)
Comment on attachment 8884717 [details] [diff] [review] headers: Fix symbols visibility Review of attachment 8884717 [details] [diff] [review]: ----------------------------------------------------------------- Thanks! Do you have commit access to push to try? If not, I can take this the rest of the way for you.
Attachment #8884717 - Flags: review?(nfitzgerald) → review+
Cool, thanks for the reviews. I don't have commit access, so I'd appreciate if you could do the push. Would it be possible to request backporting to ESR52, in preparation for an official tarball release, since this is pretty much required in order to use the tarball? Can I do that myself just by setting the "approval-mozilla-esr52?" flag?
Some symbols that need to be public are not marked as such. (This is the same patch, but with an m-c formatted message.)
Attachment #8885381 - Flags: review+
Attachment #8884717 - Attachment is obsolete: true
Comment on attachment 8885381 [details] [diff] [review] Unresolved symbols when linking program to standalone SpiderMonkey [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: required for people embedding standalone spidermonkey 52 User impact if declined: people won't be able to embed standalone spidermonkey 52 Fix Landed on Version: in the process of landing now Risk to taking this patch (and alternatives if risky): none String or UUID changes made by this patch: none See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info.
Attachment #8885381 - Flags: approval-mozilla-esr52?
Thanks!
Assignee: nobody → philip.chimento
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/64c2fbd4b88c Unresolved symbols when linking program to standalone SpiderMonkey. r=fitzgen
Keywords: checkin-needed
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Comment on attachment 8885381 [details] [diff] [review] Unresolved symbols when linking program to standalone SpiderMonkey This is needed for SpiderMonkey and low risk. Let's uplift it to ESR52.3.
Attachment #8885381 - Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: