Bug 1379538 - Unresolved symbols when linking program to standalone SpiderMonkey. r=fitzgen

Some symbols that need to be public are not marked as such.